@@ -1,0 +1,4 @@
+connect test
+pending
+sleep 1
+disconnect
